--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,5 @@
-# Compiled class file
-*.class
+# ignore everything
+*
 
-# Log file
-*.log
-
-# BlueJ files
-*.ctxt
-
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
-
-# Package Files #
-*.jar
-*.war
-*.nar
-*.ear
-*.zip
-*.tar.gz
-*.rar
-
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
+# except this folder
+!src/practica_busqueda/*
