Comienza A estrella en estados No tiene pinta de acabar, pero hay que intentarlo. Hay un bug con las coordenadas de mundo vs pixel

--- a/.gitignore
+++ b/.gitignore
@@ -12,4 +12,5 @@ src/*
 src/practica_busqueda/*
 !src/practica_busqueda/Agent.java
 !src/practica_busqueda/AEstrella.java
+!src/practica_busqueda/NodoAEstrella.java
 !levels/
